Retrofit call - WIP

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,7 +13,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/dimen_27dp"
-        android:text="@string/moogle_text"
+        android:text="@string/app_name"
         android:textSize="@dimen/dimen_28sp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -47,7 +47,7 @@
         android:layout_marginTop="@dimen/dimen_16dp"
         android:background="@drawable/search_edittext_bg"
         android:hint="@string/search_for_music_hint"
-        android:imeOptions="actionGo"
+        android:imeOptions="actionSearch"
         android:padding="@dimen/dimen_16dp"
         android:textAlignment="center"
         android:textColor="@color/just_white"
