--- a/app/src/main/res/layout/album_results_fragment_layout.xml
+++ b/app/src/main/res/layout/album_results_fragment_layout.xml
@@ -9,12 +9,14 @@
         android:id="@+id/album_results_recyclerview"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:elevation="@dimen/dimen_2dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
+        android:id="@+id/album_info_textview"
         style="@style/AppLabelText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
