--- a/app/src/main/res/layout/music_results_fragment_layout.xml
+++ b/app/src/main/res/layout/music_results_fragment_layout.xml
@@ -1,19 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/app_bg_color">
+
     <android.support.v7.widget.RecyclerView
         android:id="@+id/music_results_recyclerview"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:elevation="@dimen/dimen_2dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
+        android:id="@+id/music_info_textview"
         style="@style/AppLabelText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
