--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,5 +10,6 @@
     <color name="just_white">#FFFFFF</color>
     <color name="light_grey_alpha75">#BF585858</color>
     <color name="app_bg_color">#000000</color>
+    <color name="app_green">#00FF00</color>
 
 </resources>
