--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <dimen name="dimen_28sp">28sp</dimen>
+    <dimen name="dimen_24sp">24sp</dimen>
+    <dimen name="dimen_18sp">18sp</dimen>
+    <dimen name="dimen_14sp">14sp</dimen>
 
     <dimen name="dimen_16dp">16dp</dimen>
 
@@ -13,4 +16,5 @@
     <dimen name="dimen_8dp">8dp</dimen>
     <dimen name="dimen_2dp">2dp</dimen>
     <dimen name="dimen_15dp">15dp</dimen>
+    <dimen name="dimen_56dp">56dp</dimen>
 </resources>
