--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -14,4 +14,15 @@
         <item name="android:fontFamily">@font/quick_sand_bold</item>
     </style>
 
+    <style name="AppLabelTextSubheader">
+        <item name="android:textColor">@color/main_app_color</item>
+        <item name="android:textSize">@dimen/dimen_18sp</item>
+        <item name="android:fontFamily">@font/quick_sand_semi_bold</item>
+    </style>
+
+    <style name="AppLabelTextInformation">
+        <item name="android:textColor">@color/main_app_color_alpha80</item>
+        <item name="android:textSize">@dimen/dimen_14sp</item>
+        <item name="android:fontFamily">@font/quick_sand_medium</item>
+    </style>
 </resources>
