--- a/app/src/main/res/layout/album_item_view.xml
+++ b/app/src/main/res/layout/album_item_view.xml
@@ -2,12 +2,10 @@
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/artist_view"
+    android:id="@+id/album_view"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     app:cardBackgroundColor="@color/lighter_grey"
-    android:layout_marginStart="@dimen/dimen_8dp"
-    android:layout_marginEnd="@dimen/dimen_8dp"
     android:layout_marginBottom="@dimen/dimen_8dp">
 
     <android.support.constraint.ConstraintLayout
@@ -15,43 +13,47 @@
         android:layout_height="match_parent">
 
         <ImageView
-            android:id="@+id/artist_imageview"
-            android:layout_width="56dp"
-            android:layout_height="56dp"
+            android:id="@+id/album_imageview"
+            android:layout_width="@dimen/dimen_82dp"
+            android:layout_height="@dimen/dimen_82dp"
             android:layout_marginBottom="@dimen/dimen_16dp"
             android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
-            android:src="@drawable/artist_icon"
             android:backgroundTint="@color/dark_grey"
+            android:src="@drawable/album_icon"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.0" />
 
         <TextView
-            android:id="@+id/artist_name_textview"
+            android:id="@+id/album_title_textview"
             style="@style/AppLabelTextSubheader"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="0dp"
+            android:layout_marginBottom="8dp"
             android:layout_marginEnd="16dp"
             android:layout_marginStart="@dimen/dimen_16dp"
             android:layout_marginTop="@dimen/dimen_16dp"
+            app:layout_constraintBottom_toTopOf="@+id/album_artist_textview"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@id/artist_imageview"
+            app:layout_constraintStart_toEndOf="@id/album_imageview"
             app:layout_constraintTop_toTopOf="parent"
-            tools:text="@string/artist_name" />
+            tools:text="@string/album_title" />
 
         <TextView
-            android:id="@+id/artist_listeners_textview"
+            android:id="@+id/album_artist_textview"
             style="@style/AppLabelTextInformation"
+            android:textSize="12sp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="16dp"
             android:layout_marginStart="@dimen/dimen_16dp"
             android:layout_marginTop="@dimen/dimen_16dp"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toEndOf="@id/artist_imageview"
+            app:layout_constraintStart_toEndOf="@id/album_imageview"
             app:layout_constraintTop_toBottomOf="@id/artist_name_textview"
-            tools:text="100 listeners" />
+            tools:text="@string/artist_name" />
 
     </android.support.constraint.ConstraintLayout>
 
