--- a/app/src/main/res/layout/album_results_fragment_layout.xml
+++ b/app/src/main/res/layout/album_results_fragment_layout.xml
@@ -9,6 +9,8 @@
         android:id="@+id/album_results_recyclerview"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:layout_marginEnd="@dimen/dimen_8dp"
+        android:layout_marginStart="@dimen/dimen_8dp"
         android:elevation="@dimen/dimen_2dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
